--- a/css/styles.css
+++ b/css/styles.css
@@ -292,18 +292,19 @@ padding: 200px;
 /* -----------------------------------------Inicio Footer------------------------------------------------------------------------------------- */
 
 
+/*
 footer div{
   display: flex;
   text-align: center;
   position: absolute;
-  left: 400px;
+  left: 700px;
 }
 
 #footer2{
   display: flex;
   text-align: center;
-  position: absolute;
-  left: 500px;
+  /*  position: absolute;
+  left: 800px;
 }
 
 footer img{
@@ -317,6 +318,28 @@ footer p{
   margin: 20px;
   font-size: 25px;
   color: rgb(255, 255, 255);
+}
+*/
+
+footer div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#footer1 img {
+  margin-right: 20px; /* add some margin to the right of the first image */
+}
+
+#footer2 img {
+  margin-left: 20px; /* add some margin to the left of the second image */
+}
+
+footer img{
+  margin-left: 40px;
+  width: 80px;
+  height: 80px;
+  border-radius: 50px;
 }
 
 
