--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,12 @@ h2{
   font-size: 18px;
   margin: 0 auto;
   display: block;
+  transition: background-color 0.3s ease
   
+}
+
+#enviar_pergunta:hover {
+  background-color: #64b354;
 }
 
 
