--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,7 @@ h2{
   font-size: 18px;
   margin: 0 auto;
   display: block;
-  transition: background-color 0.3s ease
+  transition: background-color 0.5s ease;
   
 }
 
