--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@ h2{
   font-family: 'Times New Roman', Times, serif;
   font-weight: 400;
   font-style: bold;
+  border-bottom: 1px solid #ccc;
   
 }
 
